2007-05-31  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, PkgVersion.pm, Validation.pm: Backport conditional
	ConfFiles and Shlibs to branch_0.27 (target release 0.27.2)

2007-04-27  Dave Morrison  <drm@finkproject.org>

	* VirtPackage.pm: (backport from HEAD) Parse a greater variety of 
	Version strings from the X server.

2007-03-19  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm: revert the OldIndexes behavior, this is something
	better worked on with dmacks' SelfUpdate refactor

2007-03-17  Dave Morrison  <drm@finkproject.org>

	* PkgVersion.pm: modify an error message

2007-03-14  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: recognize 10.4.9

2007-03-13  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Remind user to selfupdate after enabling unstable

2007-03-04  Dave Morrison  <drm@finkproject.org>

	* FinkVersion.pm.in, PkgVersion.pm, Validation.pm: implement Info4

2007-03-01  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: Added a "DownloadTimeout" option for curl
	so that the mirror doesn't wait indefinitely on bad
	downloads.
	* Base.pm: Updated to lower-case keys in new_from_properties
	like new_from_file does.

2007-02-26  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Scrap the high-level warning for splitoff
	validation failure.

2007-02-25  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: added support for detecting /usr/X11

2007-02-17  Dave Morrison  <drm@finkproject.org>

	* SysState.pm: when advising the user to run 'apt-get', the advice
	should be to run 'sudo apt-get'

2007-02-15  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* NetAccess.pm: set a timeout on curl, since it can block
	indefinitely while connecting, in some cases
	* Engine.pm, SelfUpdate.pm: Fink::Scanpackages is wrong, use
	the cvs/rsync stat files if available, or fallback to
	Fink::Package->db_index otherwise

2007-02-14  Benjamin Reed  <rangerrick@users.sourceforge.net>
