@@ -1,3 +1,8 @@
+2007-06-09  Dave Morrison  <drm@finkproject.org>
+
+	* Validation.pm: Warn if .info has "SplitOff1" instead of "SplitOff" 
+	(backport from HEAD, change made by dmacks on 2007-06-06)
+
 2007-05-31  Daniel Macks  <dmacks@netspace.org>
 
 	* Engine.pm, PkgVersion.pm, Validation.pm: Backport conditional
